Fixed text-overflow mentor remark

--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,6 @@ a
 {
   display: grid;
   grid-template-columns: repeat(3, 300px);
-  grid-template-rows: repeat(3, 123px);
   gap: 20px;
 }
 
@@ -514,10 +513,7 @@ a
   font-size: 24px;
   line-height: 30px;
   margin: 0;
-  max-width: 175px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  max-width: 180px;
 }
 
 .promo-block article:not(.hidden)
@@ -526,6 +522,7 @@ a
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 123px;
 }
 
 .promo-block .button-promo
@@ -534,9 +531,6 @@ a
   display: block;
   padding: 10px;
   width: 135px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .promo-block .button-promo:hover
@@ -563,6 +557,8 @@ a
   padding-bottom: 27px;
   width: 100%;
   height: 100%;
+  background-size: cover;
+  background-position: 50% 0;
 }
 
 .slider h3
@@ -585,8 +581,8 @@ a
 {
   grid-column-start: 1;
   grid-column-end: span 2;
-  grid-row-start: span 2;
-  grid-row-end: -1;
+  grid-row-start: 2;
+  grid-row-end: span 2;
 }
 
 .slider .button
